CS_PROD_20150209_01/Metadata/unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Locked Subscription Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>APP%3A Approved</fullName>
        </values>
        <values>
            <fullName>CA%3A Early Renewal</fullName>
        </values>
        <values>
            <fullName>CA%3A Rejected</fullName>
        </values>
        <values>
            <fullName>CA%3A Review</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Finance%3A Tax Exempt Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Subscription Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>APP%3A Approved</fullName>
        </values>
        <values>
            <fullName>APP%3A Pending Approval</fullName>
        </values>
        <values>
            <fullName>APP%3A Rejected</fullName>
        </values>
        <values>
            <fullName>CA%3A Early Renewal</fullName>
        </values>
        <values>
            <fullName>CA%3A Rejected</fullName>
        </values>
        <values>
            <fullName>CA%3A Review</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Contract Sent</fullName>
        </values>
        <values>
            <fullName>Cust%3A Contract Opened</fullName>
        </values>
        <values>
            <fullName>Cust%3A Contract Rejected</fullName>
        </values>
        <values>
            <fullName>Cust%3A Contract Signed</fullName>
        </values>
        <values>
            <fullName>Demo</fullName>
        </values>
        <values>
            <fullName>Finance%3A Tax Exempt Review</fullName>
        </values>
        <values>
            <fullName>In Negotiation</fullName>
        </values>
        <values>
            <fullName>Needs Analysis Completed</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Trial</fullName>
        </values>
        <values>
            <fullName>Voided</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Transactional Broadcast Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Voided</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AVA_SFCORE__Avalara_Company_Code__c</fullName>
        <inlineHelpText>Avalara Company Code to reference for Tax Calculation for This Opportunity.  If Not populated, uses Default Company Code specified in the currently active TaxNowSettings.</inlineHelpText>
        <label>Avalara Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Avalara_Doc_Code__c</fullName>
        <inlineHelpText>Default Value = Opportunity ID.
This is the invoice number for Avalara.  If the opportunity&apos;s Avalara Status is &quot;Saved&quot;, &quot;Committed&quot;, or &quot;Void&quot;, the invoice with the corresponding Avalara Doc Code can be viewed in the Avalara Dashboard.</inlineHelpText>
        <label>Avalara Doc Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Avalara_Status__c</fullName>
        <inlineHelpText>Temporary = Opportunity Not Saved to Dashboard
Saved = Opportunity Saved to Dashboard
Committed = Opportunity Committed to Dashboard (Finalized) 
Void = Opportunity Voided in Dashboard

Field Value Cannot Be Edited</inlineHelpText>
        <label>Avalara Status</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Billing_Address__c</fullName>
        <formula>Account.BillingStreet &amp; BR() &amp; Account.BillingCity &amp; &quot;, &quot; &amp;  Account.BillingState  &amp; &quot; &quot;  &amp;  Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If &quot;Use Billing Address&quot; is checked in the currently active TaxNow Settings, this is the address that is used for the destination address for sales tax calculations.</inlineHelpText>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__NonTaxable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, the entire oportunity will be calculated as exempt from tax.

Note:  If Exemption Certificate Management System (ECMS) is enabled, and the Setting is &apos;Required&apos; in your Avalara Dashboard, this checkbox will have no effect.</inlineHelpText>
        <label>Non Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Opportunity_Date__c</fullName>
        <inlineHelpText>Default value is current date.  This is the invoice date for reporting purposes, and if the tax date is not entered, also the tax date.</inlineHelpText>
        <label>Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Sales_Tax__c</fullName>
        <inlineHelpText>Sum of Line Item Sales Tax Amounts, not including S&amp;H</inlineHelpText>
        <label>Sales Tax</label>
        <summarizedField>OpportunityLineItem.AVA_SFCORE__LineTax__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__ShippingAddress__c</fullName>
        <formula>Account.ShippingStreet &amp; BR() &amp; Account.ShippingCity &amp; &quot;, &quot; &amp;  Account.ShippingState  &amp; &quot; &quot;  &amp;  Account.ShippingPostalCode</formula>
        <inlineHelpText>Account Shipping Address Used for destination in Sales Tax Calculations unless Use Billing Address is checked in TaxNowSettings.</inlineHelpText>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__ShippingTax__c</fullName>
        <description>Usually a hidden field - updated by GetTax and used to calculate total sales tax</description>
        <inlineHelpText>Sales Tax on Shipping and Handling</inlineHelpText>
        <label>ShippingTax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Shipping__c</fullName>
        <inlineHelpText>Shipping and Handling amount</inlineHelpText>
        <label>Shipping and Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Tax_Date__c</fullName>
        <inlineHelpText>If this field has a date entered, the sales tax calculation will use the rates that were applicable on the tax Date, else the rates that are effective as of the quote date are used.</inlineHelpText>
        <label>Tax Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Tax_Now_Status__c</fullName>
        <inlineHelpText>&apos;Not Calculated&apos; = Sales Tax Not Calculated
&apos;Modified&apos; = Opportunity Has Changed Since Last Tax Calc
&apos;Finalized&apos; = Opportunity is Finalized and May Not Be Changed
&apos;Calculated&apos; = Sales Tax Calculated &amp; Up To Date

Field Value Cannot Be Edited</inlineHelpText>
        <label>Tax Now Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Total__c</fullName>
        <formula>Amount  +   AVA_SFCORE__Shipping__c +  AVA_SFCORE__Sales_Tax__c  +  AVA_SFCORE__ShippingTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order Total, including S&amp;H and Sales Tax</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Access_to_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Access to Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Credit_Reference__c</fullName>
        <formula>IF( Account.Credit_Reference__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Credit Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Level_Discount__c</fullName>
        <formula>Account.Account_Level_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Level Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Ownership_History__c</fullName>
        <description>Added by LM on 4/3/2014 for Phase2</description>
        <label>Account Ownership History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>NOW() -  Created_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <description>Created by LM on 9/26/2013 for Phase 2 rollout</description>
        <label>At Risk?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BDC_3_Month_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>BDC 3 Month Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDC_3_Month_Call_Grade__c</fullName>
        <description>Created by LM on 10/28/2013 for Phase 2 rollout</description>
        <label>BDC 3 Month Call Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BDC_6_Month_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>BDC 6 Month Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDC_6_Month_Call_Grade__c</fullName>
        <description>Created by LM on 10/28/2013 for Phase 2 rollout</description>
        <label>BDC 6 Month Call Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BDC_9_Month_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>BDC 9 Month Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDC_9_Month_Call_Grade__c</fullName>
        <description>Created by LM on 10/28/2013 for Phase 2 rollout</description>
        <label>BDC 9 Month Call Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BDC_Introduction_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>BDC Introduction Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDC_Introduction_Call_Grade__c</fullName>
        <description>Created by LM on 10/28/2013 for Phase 2 rollout</description>
        <label>BDC Introduction Call Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BDC_New_Biz_Rep_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/28/2013 for Phase 2 rollout</description>
        <label>BDC New Biz Rep Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDC_New_Biz_Rep_Call_Grade__c</fullName>
        <description>Created by LM on 10/28/2013 for Phase 2 rollout</description>
        <label>BDC New Biz Rep Call Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <description>Created by LM on 3/25/2014 for Phase2</description>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookings__c</fullName>
        <formula>Amount -  Non_Commissional_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broadcast_Commissionable_Potential__c</fullName>
        <description>Created by LM on 11/5/2013 for Phase 2 rollout</description>
        <inlineHelpText>This total=Last Year&apos;s Broadcast Renewable Products-Last Year&apos;s Broadcast Non-Commissionable Products</inlineHelpText>
        <label>Broadcast Commissionable Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broadcast_Forecast_Value__c</fullName>
        <description>Created by LM on 11/5/2013 for Phase 2 rollout</description>
        <inlineHelpText>Free-form field for Broadcast Renewals to indicate the Forecast value for Reports</inlineHelpText>
        <label>Broadcast Forecast Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broadcast_Item_Count__c</fullName>
        <label># of Items</label>
        <summaryForeignKey>Broadcast_Item__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Broadcast_Joint_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Broadcast Joint Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broadcast_Non_Commissionable_Potential__c</fullName>
        <description>Created by LM on 11/5/2013 for Phase 2 rollout</description>
        <inlineHelpText>This total=Last Year&apos;s Broadcast Renewable Products-Last Year&apos;s Broadcast Commissionable Products</inlineHelpText>
        <label>Broadcast Non-Commissionable Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Known__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Budget Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Created by LM on 9/3/2013 for Phase 2 rollout</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Burrelles_Total_Value__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Burrelles Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buying_Process_Known__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Buying Process Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 12/3/2013 for Phase 2 rollout</description>
        <label>CA Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Amount__c</fullName>
        <label>CRM Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Commissionable_Potential__c</fullName>
        <label>CRM Commissionable Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Non_Commissionable_Potential__c</fullName>
        <label>CRM Non-Commissionable Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Opportunity_ID__c</fullName>
        <description>Created by LM on 1/15/2014 for Phase2</description>
        <externalId>true</externalId>
        <label>CRM Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Original_Owner__c</fullName>
        <description>Created by LM on 3/3/2014 for Phase2</description>
        <label>CRM Original Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_City__c</fullName>
        <description>Created by LM on 6/4/2014 for Phase2</description>
        <label>Change Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_Country__c</fullName>
        <description>Created by LM on 6/4/2014 for Phase2</description>
        <label>Change Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_Email__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Shipping Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_First_Name__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Shipping First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_Last_Name__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Shipping Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_Phone__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Change Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_State__c</fullName>
        <description>Created by LM on 6/4/2014 for Phase2</description>
        <label>Change Shipping State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_Street__c</fullName>
        <description>Created by LM on 6/4/2014 for Phase2</description>
        <label>Change Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Shipping_Zip__c</fullName>
        <description>Created by LM on 6/4/2014 for Phase2</description>
        <label>Change Shipping Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_By__c</fullName>
        <description>Added by LM on 3/18/2013; From NetSuite</description>
        <label>Checked By</label>
        <picklist>
            <picklistValues>
                <fullName>*AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Aper, C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Bleizeffer, S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Gardner, E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Gilbert, J.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Hawkins, T.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-McIlrath, C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Moore, K.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Novak, P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Perkins, J.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Robinson, K.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Reyes, P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Schoening, Y.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Smith, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Tye, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Waters, B.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creat-Hansen, T.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Buenavista, J.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Ellis, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Ream, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Samperisi, C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Amyot, B.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Codner, S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Lee, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Leslie, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Liatsis, M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-McKeon, E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Regan, K.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CisionPoint_ID__c</fullName>
        <formula>Account.CisionPoint_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CisionPoint ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <description>Added by LM on 2/26/2013; From NetSuite</description>
        <label>Client Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Services_Tasks_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Services Tasks Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Reason_Other__c</fullName>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Close Reason (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reasons_del__c</fullName>
        <description>Remember to duplicate any changes here in the Develop/Custom Settings section, too.</description>
        <label>Close Reasons</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Auto-Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content: Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content: Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Use Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eliminated/Reduced PR Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Services Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Analysis Methodology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needed Full Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment/Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response From Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business/Merger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secured 2 yr deal (CA use only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified Lead</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date_Time__c</fullName>
        <description>Created by LM on 4/22/2014 for Dave D</description>
        <label>Closed Won Date Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>